# qtrest

./: .gitignore  CMakeLists.txt  LICENSE  QtMicroRestFramework.qmodel  README.md  com_github_kafeg_qtrest.pri  com_github_kafeg_qtrest.qbs  com_github_kafeg_qtrest.qrc  com_github_qtrest.pri  com_github_qtrest.qrc  qmldir  qpm.json  qtrest.pc.in  qtrest.pri
cmake/: qtrestConfig.cmake
core/: CMakeLists.txt  abstractjsonrestlistmodel.cpp  abstractjsonrestlistmodel.h  abstractxmlrestlistmodel.h  baserestlistmodel.cpp  baserestlistmodel.h  detailsmodel.h  jsonrestlistmodel.h  pagination.h  requests.cpp  restitem.cpp  restitem.h
docs/: QtMicroRestFramework.qmodel  RestApi.qmodel
example/: CMakeLists.txt  jsonplaceholderapi.cpp  jsonplaceholderapi.h  main.cpp  main.qml
src/: abstractjsonrestlistmodel.cpp  abstractjsonrestlistmodel.h  abstractxmlrestlistmodel.cpp  abstractxmlrestlistmodel.h  apibase.cpp  apibase.h  jsonrestlistmodel.cpp  jsonrestlistmodel.h  usingleton.h  xmlrestlistmodel.cpp  xmlrestlistmodel.h
src/base/: apibase.cpp  apibase.h  baserestlistmodel.cpp  baserestlistmodel.h  detailsmodel.cpp  detailsmodel.h  pagination.cpp  pagination.h  qtrest_global.h  requests.cpp  requests.h  restitem.cpp  restitem.h
src/models/: abstractjsonrestlistmodel.cpp  abstractjsonrestlistmodel.h  abstractxmlrestlistmodel.cpp  abstractxmlrestlistmodel.h  baserestlistmodel.cpp  baserestlistmodel.h  detailsmodel.cpp  detailsmodel.h  jsonrestlistmodel.cpp  jsonrestlistmodel.h  pagination.cpp  pagination.h  requests.h  restitem.cpp  restitem.h  xmlrestlistmodel.cpp  xmlrestlistmodel.h
